Finalize the Tagging of User Remove the Parent

--- a/app/admin/components/asp-net-roles/asp-net-roles.component.html
+++ b/app/admin/components/asp-net-roles/asp-net-roles.component.html
@@ -349,12 +349,10 @@
                     <td>{{role.id}}</td>
                     <td>{{role.mainmodulename}}</td>
                     <td>{{role.submenuname}}</td>
-
-
                     <td class="text-center">
                       <button mat-stroked-button color="primary" class="editbtnStyle"
                         (click)="onTaggedClick($event, role)">
-                        <mat-icon>add_circle_outline</mat-icon>
+                        <mat-icon>add_circle_outline</mat-icon> UnTag
                       </button>&nbsp;
                     </td>
                   </tr>
