Laboratory Procedure Finalized

--- a/app/admin/components/lt-laboratory-procedure/laboratory-procedure.component.html
+++ b/app/admin/components/lt-laboratory-procedure/laboratory-procedure.component.html
@@ -53,19 +53,15 @@
               <i class="fa fa-sort-down hand-icon text-primary" *ngIf="sortBy == 'lab_description' && sortOrder == 'DESC' " (click)="sortOrder = 'ASC' "></i>
             </th>
             <th style="width: 20%;">Status</th>
-            <!-- <th>Created Date</th>
-            <th>Created By</th> -->
+
             <th class="text-center" style="width:20%">Actions</th>
           </tr>
           <tr *ngFor="let labTestProc of labTestProcedures | filter: searchBy : searchText | sort : sortBy : sortOrder | paging : currentPageIndex : pageSize; let i = index">
-            <!-- <td>{{labTestProc.id}}</td> -->
             <td>{{labTestProc.lab_description}}</td>
             <td>{{labTestProc.is_active_status}}</td>
-            <!-- <td>{{labTestProc.created_at}}</td>
-            <td>{{labTestProc.created_by}}</td> -->
             <td class="text-center">
-              <button mat-stroked-button color="primary" class="editbtnStyle" (click)="onEditClick($event, labTestProc)" data-toggle="modal" data-target="#editLabProcedureModal" data-backdrop="false" data-keyboard="false"><mat-icon> update</mat-icon></button>&nbsp;
-              <!-- <button mat-stroked-button color="warn" (click)="onDeleteClick($event, labTestProc)" data-toggle="modal" data-target="#deleteModal" data-backdrop="false" data-keyboard="false">Delete</button> -->
+              <button mat-stroked-button color="primary" class="editbtnStyle" (click)="onEditClick($event, labTestProc)" data-toggle="modal" data-target="#editLabProcedureModal" data-backdrop="false" data-keyboard="false"><mat-icon> update</mat-icon> Edit</button>&nbsp;
+
             </td>
           </tr>
         </table>
@@ -137,21 +133,7 @@
             </div>
           </div>
 
-          <!-- <div class="form-group row">
-            <label for="txtNewClientLocationName" class="col-sm-4 col-form-label">Created Date</label>
-            <div class="col-sm-8">
-              <input type="date"  id="created_at" class="form-control" placeholder="" name="created_at"  formControlName="created_at" maxlength="30" #defaultTextBox_New [ngClass]="{ 'is-invalid': newForm.get('created_at').invalid && (newForm.get('created_at').dirty || newForm.get('created_at').touched || newForm.valid), 'is-valid': newForm.get('created_at').valid && (newForm.get('lab_description').dirty || newForm.get('created_at').touched || newForm.valid) }" #LabTestProcedureDesc>
-              <span class="text-danger" *ngIf="newForm.get('created_at').invalid && (newForm.get('created_at').dirty || newForm.get('created_at').touched || newForm.valid) && newForm.get('created_at').errors?.required">Date can't be blank</span>
-            </div>
-          </div> -->
 
-          <!-- <div class="form-group row">
-            <label for="txtNewClientLocationName" class="col-sm-4 col-form-label">Created By</label>
-            <div class="col-sm-8">
-              <input type="text" autocomplete="off" id="created_by" class="form-control"  name="created_by"  formControlName="created_by" maxlength="30" #defaultTextBox_New [ngClass]="{ 'is-invalid': newForm.get('created_by').invalid && (newForm.get('created_by').dirty || newForm.get('created_by').touched || newForm.valid), 'is-valid': newForm.get('created_by').valid && (newForm.get('created_by').dirty || newForm.get('created_by').touched || newForm.valid) }" #LabTestProcedureDesc>
-              {{loginUserName}}
-            </div>
-          </div> -->
 
           <div class="form-group row">
             <label for="drpEditClientLocation" class="col-sm-4 col-form-label">Status </label>
@@ -216,36 +198,4 @@
   </div>
 </form>
 
-<!-- Delete Lab Test Procedure -->
-<form>
-  <div class="modal" role="dialog" id="deleteModal">
-    <div class="modal-dialog modal-md">
-      <div class="modal-content">
-        <div class="modal-header bg-primary text-white">
-          <div class="modal-title">Delete Status</div>
-          <button type="button" class="close" data-dismiss="modal"><span>&times;</span></button>
-        </div>
-        <div class="modal-body">
 
-
-          <div class="form-group row">
-
-            <mat-form-field class="w-100" floatLabel="auto" appearance="standard" color="primary">
-              <input type="text" matInput id="txtStatusName" placeholder="Status" name="status_name" [(ngModel)]="deleteRejectStatus.lab_description" disabled="disabled" #DeleteLabTestProcedureDesc>
-              <mat-label>Description</mat-label>
-              <!-- <mat-hint align="end">The subject of the transaction</mat-hint> -->
-              <mat-icon matPrefix>info<span class="material-icons-outlined">
-              </span>
-              </mat-icon>
-          </mat-form-field>
-          </div>
-
-        </div>
-        <div class="modal-footer">
-          <!-- <button class="btn btn-warning" data-dismiss="modal" type="button">Cancel</button> -->
-          <button mat-stroked-button color="warn" data-dismiss="modal" (click)="onDeleteConfirmClick()">Delete</button>
-        </div>
-      </div>
-    </div>
-  </div>
-</form>
