--- a/app/admin/components/lt-laboratory-test-sub-remarks/labtest-laboratory-test-sub-remarks.component.html
+++ b/app/admin/components/lt-laboratory-test-sub-remarks/labtest-laboratory-test-sub-remarks.component.html
@@ -59,8 +59,8 @@
             <td>{{item.lab_sub_remarks_description}}</td>
             <td>{{item.lab_test_remarks_active_status}}</td>
             <td>
-              <button mat-stroked-button color="primary"  class="editbtnStyle" (click)="onEditClick($event, item)" data-toggle="modal" data-target="#editLabTestSubRemarksModal" data-backdrop="false" data-keyboard="false"><mat-icon> update</mat-icon></button>&nbsp;
-              <!-- <button mat-stroked-button color="warn" (click)="onDeleteClick($event, item)" data-toggle="modal" data-target="#deleteLabTestSubRemarksModal" data-backdrop="false" data-keyboard="false">Delete</button> -->
+              <button mat-stroked-button color="primary"  class="editbtnStyle" (click)="onEditClick($event, item)" data-toggle="modal" data-target="#editLabTestSubRemarksModal" data-backdrop="false" data-keyboard="false"><mat-icon> update</mat-icon> Edit</button>&nbsp;
+
             </td>
           </tr>
         </table>
