--- a/app/components/internal-preparation/internal-order.component.html
+++ b/app/components/internal-preparation/internal-order.component.html
@@ -10,7 +10,7 @@
           >
         </li>
         <li class="breadcrumb-item dashboardActive" aria-current="page">
-          Internal Orders Preparation
+          Internal Orders Preparation X
         </li>
       </ol>
     </nav>
