--- a/app/admin/components/projects-partial-po/projects-partial-po.component.html
+++ b/app/admin/components/projects-partial-po/projects-partial-po.component.html
@@ -17,182 +17,168 @@
 
     <mat-tab-group mat-align-tabs="start">
       <ng-template [ngIf]="WHReceivingList === 1">
-      <mat-tab>
-        <ng-template mat-tab-label>
-          WH Receiving List
-        </ng-template>
+        <mat-tab>
+          <ng-template mat-tab-label>
+            WH Receiving List
+          </ng-template>
 
-        <!-- filter -->
-        <div class="col-sm-12" style="padding-top: 2em">
-          <div class="d-flex">
-            <div class="p-2">
-              <div class="input-group searchBtnStyle">
-                <div class="input-group-prepend">
-                  <span class="input-group-text" id="basic-addon1"><span class="fa fa-filter"></span></span>
+          <!-- filter -->
+          <div class="col-sm-12" style="padding-top: 2em">
+            <div class="d-flex">
+              <div class="p-2">
+                <div class="input-group searchBtnStyle">
+                  <div class="input-group-prepend">
+                    <span class="input-group-text" id="basic-addon1"><span class="fa fa-filter"></span></span>
+                  </div>
+                  <select class="form-control" id="drpSearchBy" name="SearchBy" [(ngModel)]="searchBy"
+                    (selectionChange)="HideSearchBtn($event)">
+                    <option value="po_number">PO NUMBER</option>
+                    <option value="item_code">ITEM CODE</option>
+                    <option value="item_description">ITEM DESCRIPTION</option>
+                  </select>
                 </div>
-                <select class="form-control" id="drpSearchBy" name="SearchBy" [(ngModel)]="searchBy"
-                  (selectionChange)="HideSearchBtn($event)">
-                  <option value="po_number">PO NUMBER</option>
-                  <option value="item_code">ITEM CODE</option>
-                  <option value="item_description">ITEM DESCRIPTION</option>
-                </select>
               </div>
-            </div>
 
-            <div class="p-2">
-              <div class="input-group searchBtnStyle">
-                <div class="input-group-prepend">
-                  <span class="input-group-text" id="basic-addon1"><span class="fa fa-search"></span></span>
+              <div class="p-2">
+                <div class="input-group searchBtnStyle">
+                  <div class="input-group-prepend">
+                    <span class="input-group-text" id="basic-addon1"><span class="fa fa-search"></span></span>
+                  </div>
+                  <input type="search" class="form-control" placeholder="Find here...." id="txtSearchText"
+                    name="SearchText" autocomplete="off" [(ngModel)]="searchText" (keyup)="onSearchTextKeyup($event)" />
                 </div>
-                <input type="search" 
-                class="form-control" 
-                placeholder="Find here...." 
-                id="txtSearchText" 
-                name="SearchText"
-                autocomplete="off"
-                [(ngModel)]="searchText" 
-                (keyup)="onSearchTextKeyup($event)" />
               </div>
             </div>
           </div>
-        </div>
 
-        <!-- table -->
-        <div class="col-lg-12">
-          <div class="d-flex">
-            <div class="col-xl-12 col-lg-9 mx-auto scrollableTableMain tbl-text">
-              <!-- table table-striped table-bordered nowrap table-responsive-sm -->
-              <table class="" style="width: 100%">
-                <thead>
-                  <tr class="text-light header-bg-color-um system-name">
-                    <th>PO&nbsp;No.</th>
-                    <th>Item&nbsp;Code</th>
-                    <th>Description</th>
-                    <th>Supplier</th>
-                    <th>Qty.&nbsp;Ordered</th>
-                    <th>Qty.</th>
-                    <th class="text-center">Actions</th>
-                  </tr>
-                </thead>
-                <tr *ngFor="
+          <!-- table -->
+          <div class="col-lg-12">
+            <div class="d-flex">
+              <div class="col-xl-12 col-lg-9 mx-auto scrollableTableMain tbl-text">
+                <table class="" style="width: 100%">
+                  <thead>
+                    <tr class="text-light header-bg-color-um system-name">
+                      <th>PO&nbsp;No.</th>
+                      <th>Item&nbsp;Code</th>
+                      <th>Description</th>
+                      <th>Supplier</th>
+                      <th>Qty.&nbsp;Ordered</th>
+                      <th>Qty.</th>
+                      <th class="text-center">Actions</th>
+                    </tr>
+                  </thead>
+                  <tr *ngFor="
                     let item of projects
                       | filter: searchBy:searchText
                       | sort: sortBy:sortOrder
                       | paging: currentPageIndex:pageSize;
                     let i = index
                   ">
-                  <td>{{ item.po_number }}</td>
-                  <td>{{ item.item_code }}</td>
-                  <td class="td-text-left">{{ item.item_description }}</td>
-                  <td class="td-text-left">{{ item.supplier }}</td>
-                  <td>{{ item.qty_order | number: "1.0":"en-US" }}</td>
-                  <td>
-                    {{ item.actual_delivery | number: "1.0":"en-US" }}            
-                    <mat-icon class="zerobadge{{ item.total_of_reject_mat | number }}"
-                      matBadge="{{ item.total_of_reject_mat | number }}" matBadgeColor="warn">
-                    </mat-icon>
-                  </td>
+                    <td>{{ item.po_number }}</td>
+                    <td>{{ item.item_code }}</td>
+                    <td class="td-text-left">{{ item.item_description }}</td>
+                    <td class="td-text-left">{{ item.supplier }}</td>
+                    <td>{{ item.qty_order | number: "1.0":"en-US" }}</td>
+                    <td>
+                      {{ item.actual_delivery | number: "1.0":"en-US" }}
+                      <mat-icon class="zerobadge{{ item.total_of_reject_mat | number }}"
+                        matBadge="{{ item.total_of_reject_mat | number }}" matBadgeColor="warn">
+                      </mat-icon>
+                    </td>
 
-                  <td class="text-center">
+                    <td class="text-center">
 
-                    <button 
-                    mat-stroked-button 
-                    class="editbtnStyle" 
-                    color="black" 
-                    (click)="onClickView(item, i)"
-                    data-toggle="modal" 
-                    data-target="#viewModal" 
-                    data-backdrop="false" 
-                    data-keyboard="false"
-                    title="View">
-                    <span class="fa fa-eye"></span> View
-                    </button>
+                      <button mat-stroked-button class="editbtnStyle" color="black" (click)="onClickView(item, i)"
+                        data-toggle="modal" data-target="#viewModal" data-backdrop="false" data-keyboard="false"
+                        title="View">
+                        <span class="fa fa-eye"></span> View
+                      </button>
 
-                    <ng-container *ngIf="
+                      <ng-container *ngIf="
                         (loginService.currentUserName != null &&
                           loginService.currentUserRoleSession == 'Admin') ||
                         loginService.currentUserRoleSession == 'QCSupervisor'
                       ">
-                      <button mat-stroked-button class="editbtnStyle" color="warn" (click)="onCancelClick($event, i)"
-                        data-toggle="modal" data-target="#CancelledTransactionModal" data-backdrop="false"
-                        data-keyboard="false">
-                        <span class="fa fa-ban"></span> Cancel
-                      </button>&nbsp;
-                    </ng-container>
-                  </td>
-                </tr>
-              </table>
+                        <button mat-stroked-button class="editbtnStyle" color="warn" (click)="onCancelClick($event, i)"
+                          data-toggle="modal" data-target="#CancelledTransactionModal" data-backdrop="false"
+                          data-keyboard="false">
+                          <span class="fa fa-ban"></span> Cancel
+                        </button>&nbsp;
+                      </ng-container>
+                    </td>
+                  </tr>
+                </table>
+              </div>
             </div>
           </div>
-        </div>
 
-        <!-- pagination -->
-        <div class="col-sm-12">
-          <ul class="pagination paginationStyle justify-content-center mt-1">
-            <li class="page-item" (click)="onPageIndexClicked(currentPageIndex - 1)">
-              <a mat-stroked-button color="primary" class="mr-1 font-color-black" href="#"
-                onclick="return false">Prev</a>
-            </li>
+          <!-- pagination -->
+          <div class="col-sm-12">
+            <ul class="pagination paginationStyle justify-content-center mt-1">
+              <li class="page-item" (click)="onPageIndexClicked(currentPageIndex - 1)">
+                <a mat-stroked-button color="primary" class="mr-1 font-color-black" href="#"
+                  onclick="return false">Prev</a>
+              </li>
 
-            <ng-container *ngIf="pages.length <= 10">
-              <li class="page-item" *ngFor="let page of pages" [ngClass]="{
+              <ng-container *ngIf="pages.length <= 10">
+                <li class="page-item" *ngFor="let page of pages" [ngClass]="{
                   'link-active-paging': page.pageIndex == currentPageIndex
                 }" (click)="onPageIndexClicked(page.pageIndex)">
-                <a class="page-link" href="#" onclick="return false">{{
-                  page.pageIndex + 1
-                  }}</a>
-              </li>
-            </ng-container>
+                  <a class="page-link" href="#" onclick="return false">{{
+                    page.pageIndex + 1
+                    }}</a>
+                </li>
+              </ng-container>
 
-            <ng-container *ngIf="pages.length > 10">
-              <li class="page-item" [ngClass]="{ 'link-active-paging': currentPageIndex == 0 }"
-                (click)="onPageIndexClicked(0)">
-                <a class="page-link" href="#" onclick="return false">1</a>
-              </li>
+              <ng-container *ngIf="pages.length > 10">
+                <li class="page-item" [ngClass]="{ 'link-active-paging': currentPageIndex == 0 }"
+                  (click)="onPageIndexClicked(0)">
+                  <a class="page-link" href="#" onclick="return false">1</a>
+                </li>
 
-              <li class="page-item" [ngClass]="{ 'link-active-paging': currentPageIndex == 1 }"
-                (click)="onPageIndexClicked(1)">
-                <a class="page-link" href="#" onclick="return false">2</a>
-              </li>
+                <li class="page-item" [ngClass]="{ 'link-active-paging': currentPageIndex == 1 }"
+                  (click)="onPageIndexClicked(1)">
+                  <a class="page-link" href="#" onclick="return false">2</a>
+                </li>
 
-              <li *ngIf="currentPageIndex > 1 && currentPageIndex < pages.length - 2">
-                &nbsp;...&nbsp;
-              </li>
+                <li *ngIf="currentPageIndex > 1 && currentPageIndex < pages.length - 2">
+                  &nbsp;...&nbsp;
+                </li>
 
-              <li class="page-item" [ngClass]="'link-active-paging'" (click)="onPageIndexClicked(currentPageIndex)"
-                *ngIf="currentPageIndex > 1 && currentPageIndex < pages.length - 2">
-                <a class="page-link" href="#" onclick="return false">{{
-                  currentPageIndex + 1
-                  }}</a>
-              </li>
+                <li class="page-item" [ngClass]="'link-active-paging'" (click)="onPageIndexClicked(currentPageIndex)"
+                  *ngIf="currentPageIndex > 1 && currentPageIndex < pages.length - 2">
+                  <a class="page-link" href="#" onclick="return false">{{
+                    currentPageIndex + 1
+                    }}</a>
+                </li>
 
-              <li>&nbsp;...&nbsp;</li>
+                <li>&nbsp;...&nbsp;</li>
 
-              <li class="page-item" [ngClass]="{
+                <li class="page-item" [ngClass]="{
                   'link-active-paging': currentPageIndex == pages.length - 2
                 }" (click)="onPageIndexClicked(pages.length - 2)">
-                <a class="page-link" href="#" onclick="return false">{{
-                  pages.length - 1
-                  }}</a>
-              </li>
+                  <a class="page-link" href="#" onclick="return false">{{
+                    pages.length - 1
+                    }}</a>
+                </li>
 
-              <li class="page-item" [ngClass]="{
+                <li class="page-item" [ngClass]="{
                   'link-active-paging': currentPageIndex == pages.length - 1
                 }" (click)="onPageIndexClicked(pages.length - 1)">
-                <a class="page-link" href="#" onclick="return false">{{
-                  pages.length
-                  }}</a>
-              </li>
-            </ng-container>
+                  <a class="page-link" href="#" onclick="return false">{{
+                    pages.length
+                    }}</a>
+                </li>
+              </ng-container>
 
-            <li class="page-item" (click)="onPageIndexClicked(currentPageIndex + 1)">
-              <a mat-stroked-button color="primary" class="ml-1 font-color-black" href="#"
-                onclick="return false">Next</a>
-            </li>
-          </ul>
-        </div>
-      </mat-tab>
-    </ng-template>
+              <li class="page-item" (click)="onPageIndexClicked(currentPageIndex + 1)">
+                <a mat-stroked-button color="primary" class="ml-1 font-color-black" href="#"
+                  onclick="return false">Next</a>
+              </li>
+            </ul>
+          </div>
+        </mat-tab>
+      </ng-template>
     </mat-tab-group>
   </div>
 </div>
@@ -1037,7 +1023,7 @@
                 </div>
               </div>
 
-      
+
             </div>
 
           </div>
