--- a/app/admin/components/store-order/store-order.component.html
+++ b/app/admin/components/store-order/store-order.component.html
@@ -15,7 +15,8 @@
       </ol>
     </nav>
 
-    <mat-tab-group mat-align-tabs="start" (selectedTabChange)="tabRefresh()">
+    <mat-tab-group mat-align-tabs="start"
+     (selectedTabChange)="tabRefresh()">
 
       <!-- Store Order -->
       <mat-tab>
@@ -25,19 +26,21 @@
             class="badge badge-danger zerobadge{{ totalStoreOrderRowCount }}">{{ totalStoreOrderRowCount }}</span> -->
         </ng-template>
 
-        <div class="col-sm-12" style="padding-top: 2em">
+     
+         <!-- filter -->
+         <div class="col-sm-12" style="padding-top: 2em">
           <div class="d-flex">
             <div class="p-2">
               <div class="input-group searchBtnStyle">
                 <div class="input-group-prepend">
                   <span class="input-group-text" id="basic-addon1"><span class="fa fa-filter"></span></span>
                 </div>
-                <select class="form-control" id="drpSearchBy" name="SearchBy" [(ngModel)]="searchBy">
-                  <option value="is_approved_prepa_date">PREPARATION DATE</option>
-                  <option value="category">CATEGORY</option>
-                  <option value="store_name">STORE</option>
-                  <option value="route">ROUTE</option>
-                  <option value="area">AREA</option>
+                <select class="form-control" id="drpSearchBy" name="SearchBy" [(ngModel)]="searchBy"
+                 >
+                 <option value="category">CATEGORY</option>
+                 <option value="store_name">STORE</option>
+                 <option value="route">ROUTE</option>
+                 <option value="area">AREA</option>
                 </select>
               </div>
             </div>
@@ -47,22 +50,23 @@
                 <div class="input-group-prepend">
                   <span class="input-group-text" id="basic-addon1"><span class="fa fa-search"></span></span>
                 </div>
-                <input type="search" class="form-control" placeholder="Find here...." autocomplete="off"
-                  id="txtSearchText" name="SearchText" [(ngModel)]="searchText" (keyup)="onSearchTextChange($event)" />
+                <input type="search" class="form-control" placeholder="Find here...." id="txtSearchText"
+                  name="SearchText" autocomplete="off" [(ngModel)]="searchText" (keyup)="onSearchTextChange($event)" />
               </div>
             </div>
           </div>
+        </div>
 
-          <div class="col-lg-12">
-            <div class="d-flex">
-              <div class="col-xl-12 col-lg-9 mx-auto scrollableTableMain">
-                <!-- table table-striped table-bordered nowrap table-responsive-sm -->
-                <table class="table-responsive-xl" style="width:100%">
+
+        <div class="col-lg-12">
+          <div class="d-flex">
+            <div class="col-xl-12 col-lg-9 mx-auto scrollableTableMain tbl-text">
+              <table class="" style="width: 100%">
                   <thead>
                     <tr class="text-light header-bg-color-um system-name">
-                      <th>
-                        Preparation Date
-                        <i class="fa fa-sort hand-icon" *ngIf="sortBy != 'reject_status_name' "
+                      <th style="width:14%">
+                      Preparation Date
+                        <!-- <i class="fa fa-sort hand-icon" *ngIf="sortBy != 'reject_status_name' "
                           (click)="sortBy = 'reject_status_name'; sortOrder = 'ASC' "></i>
 
                         <i class="fa fa-sort-up hand-icon text-primary"
@@ -71,37 +75,35 @@
 
                         <i class="fa fa-sort-down hand-icon text-primary"
                           *ngIf="sortBy == 'reject_status_name' && sortOrder == 'DESC' "
-                          (click)="sortOrder = 'ASC' "></i>
+                          (click)="sortOrder = 'ASC' "></i> -->
                       </th>
-                      <th>Category</th>
-                      <th>Store</th>
-                      <th>Route</th>
-                      <th>Area</th>
-                      <th>Total Item/s</th>
-                      <th>Prepared Item/s</th>
+                      <th style="width:14%">Category</th>
+                      <th style="width:14%">Store</th>
+                      <th style="width:14%">Route</th>
+                      <th style="width:14%">Area</th>
+                      <th style="width:14%">Total Item/s</th>
+                      <th style="width:14%">Prepared Item/s</th>
                     </tr>
                   </thead>
-                <tbody>
-                  <tr
-                    *ngFor="let item of storeOrders | filter: searchBy : searchText | sort : sortBy : sortOrder | 
-                    paging : currentPageIndex : pageSize; let i = index"
-                    >
-                    
-                    <td>{{item.is_approved_prepa_date | date: "MM/dd/yyyy" }}</td>
-                    <td>{{item.category}}</td>
-                    <td>{{item.store_name}}</td>
-                    <td>{{item.route}}</td>
-                    <td>{{item.area}}</td>
-                    <td>{{item.totalItems}}</td>
-                    <td>{{item.totalPreparedItems}}</td>
-                  </tr>
+                  <tbody>
+                    <tr *ngFor="let item of storeOrders | filter: searchBy : searchText | sort : sortBy : sortOrder | 
+                    paging : currentPageIndex : pageSize; let i = index">
+
+                      <td>{{item.is_approved_prepa_date | date: "MM/dd/yyyy" }}</td>
+                      <td>{{item.category}}</td>
+                      <td>{{item.store_name}}</td>
+                      <td>{{item.route}}</td>
+                      <td>{{item.area}}</td>
+                      <td>{{item.totalItems}}</td>
+                      <td>{{item.totalPreparedItems}}</td>
+                    </tr>
                   </tbody>
                 </table>
               </div>
             </div>
           </div>
 
-          <div class="col-lg-12">
+          <div class="col-sm-12">
             <ul class="pagination paginationStyle justify-content-center mt-1">
               <li class="page-item" (click)="onPageIndexClicked(currentPageIndex - 1)">
                 <a mat-stroked-button color="primary" class="mr-1 font-color-black" href="#"
@@ -152,7 +154,7 @@
             </ul>
           </div>
 
-        </div>
+    
 
       </mat-tab>
 
